--- a/templates/base.html
+++ b/templates/base.html
@@ -1,29 +1,33 @@
-{% load static %}
+{% load static %}  <!-- Load the static files template tag -->
 
 <!doctype html>
 <html lang="en">
   <head>
 
     {% block meta %}
+        <!-- Meta tags for compatibility and responsive design -->
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
 
     {% block extra_meta %}
+        <!-- Placeholder block for additional meta tags, to be defined in child templates if needed -->
     {% endblock %}
 
     {% block corecss %}
+        <!-- Core CSS links: Bootstrap, Google Fonts, and a custom stylesheet -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
-        
     {% endblock %}
 
     {% block extra_css %}
+        <!-- Placeholder block for additional CSS, to be defined in child templates if needed -->
     {% endblock %}
 
     {% block corejs %}
+        <!-- Core JavaScript links: FontAwesome, jQuery, Popper.js, and Bootstrap -->
         <script src="https://kit.fontawesome.com/3018bed01b.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -31,18 +35,23 @@
     {% endblock %}
 
     {% block extra_js %}
+        <!-- Placeholder block for additional JavaScript, to be defined in child templates if needed -->
     {% endblock %}
 
+    <!-- Dynamic title block to allow child templates to customize the page title -->
     <title>E-Commerce-Boutique{% block extra_title %}{% endblock %}</title>
   </head>
   <body>
     <header class="container-fluid fixed-top">
+      <!-- Top navigation bar, hidden on smaller screens (d-none d-lg-flex) -->
       <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
+        <!-- Logo and site title -->
         <div class="col-12 col-lg-4 my-auto py-1 py-lg py-0 text-center text-lg-left">
           <a href="{% url 'home' %}" class="nav-link min-logo-link">
             <h2 class="logo-font text-block my-0"><strong>E-Commerce</strong> Boutique</h2>
           </a>
         </div>
+        <!-- Search bar -->
         <div class="col-12 col-lg-4 my-auto py-1 py-lg py-0">
           <form action="" method="get">
             <div class="input-group h-100">
@@ -57,8 +66,10 @@
             </div>
           </form>
         </div>
+        <!-- User account and shopping cart links -->
         <div class="col-12 col-lg-4 my-auto py-1 py-lg py-0">
           <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+            <!-- User account dropdown menu -->
             <li class="list-inline-item dropdown">
               <a class="text-block nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="text-center">
@@ -69,6 +80,7 @@
                 </div>
               </a>
               <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                <!-- Conditional links based on user authentication -->
                 {% if request.user.is_authenticated %}
                   {% if request.user.is_superuser %}
                     <a href="" class="dropdown-item">Product Management</a>
@@ -81,6 +93,7 @@
                 {% endif %}
               </div>
             </li>
+            <!-- Shopping cart link -->
             <li class="list-inline-item">
               <a class="{% if grand_total %} text-info font-weight-bold {% else %} text-black {% endif %} nav-link" href="">
                 <div class="text-center">
@@ -98,8 +111,28 @@
           </ul>
         </div>
       </div>
+      <!-- Navbar for mobile view -->
+      <div class="row bg-white">
+        <nav class="navbar navbar-expand-lg navbar-light w-100">
+          <!-- Navbar toggler button for mobile view -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <!-- Include mobile top header -->
+          {% include 'includes/mobile-top-header.html' %}
+          <!-- Include main navigation links -->
+          {% include 'includes/main-nav.html' %}
+        </nav>
+      </div>
+      <!-- Delivery banner with free shipping threshold message -->
+      <div id="delivery-banner" class="row text-center">
+        <div class="col bg-black text-white">
+            <h4 class="logo-font my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+        </div>            
+    </div>
     </header>
 
+    <!-- Display Django messages (e.g., success, error notifications) -->
     {% if messages %}
       <div class="message-container">
         {% for message in messages %}
@@ -108,12 +141,15 @@
       </div>
     {% endif %}
 
+    <!-- Placeholder block for the page header, to be defined in child templates if needed -->
     {% block page_header %}
     {% endblock %}
 
+    <!-- Placeholder block for the main content, to be defined in child templates -->
     {% block content %}
     {% endblock %}
 
+    <!-- Placeholder block for additional JavaScript after the page has loaded, to be defined in child templates if needed -->
     {% block postloadjs %}
     {% endblock %}
     
