--- a/static/css/base.css
+++ b/static/css/base.css
@@ -73,6 +73,15 @@ body {
     background: #000 !important;
 }
 
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container width on extra-large screens (min-width: 1200px) */
@@ -96,5 +105,15 @@ body {
     /* Add padding to the header container to account for the fixed navbar */
     .header-container {
         padding-top: 164px;
+    }
+}
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
     }
 }
