--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
         </div>
         <!-- Search bar -->
         <div class="col-12 col-lg-4 my-auto py-1 py-lg py-0">
-          <form action="" method="get">
+          <form action="{% url 'products' %}" method="get">
             <div class="input-group h-100">
               <input class="form-control border border-black rounded-0" type="text" name="p" placeholder="Search Our Site">
               <div class="input-group-append">
