--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -12,7 +12,7 @@
     <!-- Dropdown menu for the mobile search form -->
     <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
         <!-- Search form inside the dropdown -->
-        <form class="form" method="GET" action="">
+        <form class="form" method="GET" action="{% url 'products' %}">
             <div class="input-group w-100">
                 <!-- Search input field -->
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site">
