--- a/static/css/base.css
+++ b/static/css/base.css
@@ -82,6 +82,11 @@ body {
 	background: white;
 	z-index: -1;
 }
+
+a.category-badge > span.badge:hover {
+    background: #212529 !important;
+    color: #fff !important;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container width on extra-large screens (min-width: 1200px) */
