--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,65 +1,61 @@
-<!-- Collapsible part of the navbar for responsive design -->
 <div class="collapse navbar-collapse" id="main-nav">
-    
-    <!-- Navigation list aligned to the center (mx-auto) -->
+    <!-- Main navigation bar with dropdowns for different product categories -->
+
     <ul class="navbar-nav w-auto mx-auto">
-        
-        <!-- Dropdown menu for "All Products" -->
+        <!-- Navigation items centered horizontally -->
+
+        <!-- Dropdown for "All Products" -->
         <li class="nav-item dropdown">
-            <!-- Dropdown toggle for "All Products" -->
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
-            <!-- Dropdown items for "All Products" -->
             <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
-                <a href="" class="dropdown-item">By Price</a>
-                <a href="" class="dropdown-item">By Rating</a>
-                <a href="" class="dropdown-item">By Category</a>
+                <!-- Links for sorting products by different attributes -->
+                <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
+                <a href="{% url 'products' %}?sort=rating&direction=desc" class="dropdown-item">By Rating</a>
+                <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item">By Category</a>
                 <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
-        <!-- Dropdown menu for "Clothing" -->
+        <!-- Dropdown for "Clothing" category -->
         <li class="nav-item dropdown">
-            <!-- Dropdown toggle for "Clothing" -->
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Clothing
             </a>
-            <!-- Dropdown items for "Clothing" -->
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
-                <a href="" class="dropdown-item">Activewear &amp; Essentials</a>
-                <a href="" class="dropdown-item">Jeans</a>
-                <a href="" class="dropdown-item">Shirts</a>
-                <a href="" class="dropdown-item">All Clothing</a>
+                <!-- Links for filtering clothing products by subcategories -->
+                <a href="{% url 'products' %}?category=activewear,essentials" class="dropdown-item">Activewear &amp; Essentials</a>
+                <a href="{% url 'products' %}?category=jeans" class="dropdown-item">Jeans</a>
+                <a href="{% url 'products' %}?category=shirts" class="dropdown-item">Shirts</a>
+                <a href="{% url 'products' %}?category=activewear,essentials,jeans,shirts" class="dropdown-item">All Clothing</a>
             </div>
         </li>
 
-        <!-- Dropdown menu for "Homeware" -->
+        <!-- Dropdown for "Homeware" category -->
         <li class="nav-item dropdown">
-            <!-- Dropdown toggle for "Homeware" -->
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Homeware
             </a>
-            <!-- Dropdown items for "Homeware" -->
             <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
-                <a href="" class="dropdown-item">Bed &amp; Bath</a>
-                <a href="" class="dropdown-item">Kitchen &amp; Dining</a>
-                <a href="" class="dropdown-item">All Homeware</a>
+                <!-- Links for filtering homeware products by subcategories -->
+                <a href="{% url 'products' %}?category=bed_bath" class="dropdown-item">Bed &amp; Bath</a>
+                <a href="{% url 'products' %}?category=kitchen_dining" class="dropdown-item">Kitchen &amp; Dining</a>
+                <a href="{% url 'products' %}?category=bed_bath,kitchen_dining" class="dropdown-item">All Homeware</a>
             </div>
         </li>
 
-        <!-- Dropdown menu for "Special Offers" -->
+        <!-- Dropdown for "Special Offers" -->
         <li class="nav-item dropdown">
-            <!-- Dropdown toggle for "Special Offers" -->
             <a class="logo-font font-weight-bold nav-link text-black" href="#" id="specials-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Special Offers
             </a>
-            <!-- Dropdown items for "Special Offers" -->
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <!-- Links for filtering special offers like new arrivals, deals, and clearance -->
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
