--- a/static/css/base.css
+++ b/static/css/base.css
@@ -47,6 +47,11 @@ body {
     color: white;
 }
 
+.btn-outline-black {
+    background: white;
+    color: black !important; /* use important to override link colors for <a> elements */
+    border: 1px solid black;
+}
 /* Hover, active, and focus states for the "Shop Now" button and black buttons */
 .shop-now-button:hover,
 .shop-now-button:active,
