--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -43,10 +43,10 @@
                     
                     <!-- Product price displayed in bold -->
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
+                    
                     {% for c in current_categories %}
                     <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span
-                            class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
+                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
                     </a>
                     {% endfor %}
                     
@@ -61,7 +61,9 @@
                     
                     <!-- Product description -->
                     <p class="mt-3">{{ product.description }}</p>
-                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST"></form>
+                    
+                    <!-- Correct form handling -->
+                    <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-12">
@@ -84,7 +86,7 @@
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
-                    </form>
+                    </form> <!-- Ensure this form is properly closed -->
                 </div>
             </div>
         </div>
