--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,7 +2,6 @@
 {% load static %}
 
 {% block page_header %}
-    <!-- Block for page header, typically for banner or header content -->
     <div class="container header-container">
         <div class="row">
             <div class="col"></div>
@@ -11,58 +10,39 @@
 {% endblock %}
 
 {% block content %}
-    <!-- Main content block for the product detail page -->
-
-    <div class="overlay"></div> <!-- Optional overlay for visual effect -->
-    
+    <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
-            <!-- Image Section: Displays the product image -->
             <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
                 <div class="image-container my-5">
-                    <!-- Check if product has an image -->
                     {% if product.image %}
-                        <!-- If product has an image, display it with a link to open the full image -->
                         <a href="{{ product.image.url }}" target="_blank">
                             <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                         </a>
-                    {% else %}
-                        <!-- If no image is available, show a placeholder image -->
+                        {% else %}
                         <a href="">
                             <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                         </a>
                     {% endif %}
                 </div>
             </div>
-
-            <!-- Product Details Section: Displays product details like name, price, rating, and description -->
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="product-details-container mb-5 mt-md-5">
-                    <!-- Product name -->
                     <p class="mb-0">{{ product.name }}</p>
-                    
-                    <!-- Product price displayed in bold -->
                     <p class="lead mb-0 text-left font-weight-bold">${{ product.price }}</p>
-                    
-                    {% for c in current_categories %}
-                    <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
-                        <span class="p-2 mt-2 badge badge-white text-black rounded-0 border border-dark">{{ c.friendly_name }}</span>
-                    </a>
-                    {% endfor %}
-                    
-                    <!-- If the product has a rating, display it with a star icon, otherwise show 'No Rating' -->
+                    {% if product.category %}
+                    <p class="small mt-1 mb-0">
+                        <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
+                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
+                        </a>
+                    </p>
+                    {% endif %}
                     {% if product.rating %}
-                        <small class="text-muted">
-                            <i class="fas fa-star mr-1"></i>{{ product.rating }} / 5
-                        </small>
+                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                     {% else %}
                         <small class="text-muted">No Rating</small>
                     {% endif %}
-                    
-                    <!-- Product description -->
                     <p class="mt-3">{{ product.description }}</p>
-                    
-                    <!-- Correct form handling -->
                     <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                         {% csrf_token %}
                         <div class="form-row">
@@ -83,7 +63,26 @@
                                 <p class="mt-3"><strong>Quantity:</strong></p>
                                 <div class="form-group w-50">
                                     <div class="input-group">
-                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-black rounded-0" 
+                                                data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-minus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control qty_input" type="number"
+                                            name="quantity" value="1" min="1" max="99"
+                                            data-item_id="{{ product.id }}"
+                                            id="id_qty_{{ product.id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-black rounded-0"
+                                                data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                <span class="icon">
+                                                    <i class="fas fa-plus"></i>
+                                                </span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -100,9 +99,14 @@
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                             {% endwith %}
                         </div>
-                    </form> <!-- Ensure this form is properly closed -->
+                    </form>
                 </div>
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
 {% endblock %}
