--- a/static/css/base.css
+++ b/static/css/base.css
@@ -104,6 +104,23 @@ a.category-badge > span.badge:hover {
 .btt-link {
     cursor: pointer;
 }
+
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container width on extra-large screens (min-width: 1200px) */
